# aiOrka

./: .env.example  .gitignore  LICENSE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
bindings/go/: README.md  go.mod
bindings/go/aiorka/: aiorka.go  aiorka_test.go
bindings/python/: README.md  pyproject.toml
bindings/python/aiorka/: __init__.py  _ffi.py  models.py
bindings/python/scripts/: build_native.sh
bindings/python/tests/: test_models.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: lib.rs  sys.rs
docs/: Implementation.md  ProjectStructure.md
examples/: aiOrka.yaml
examples/go/: go.mod  main.go
examples/kotlin/: build.gradle.kts
examples/python/: test_app.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
gradle/: libs.versions.toml
scripts/: build_bindings.sh
shared/: build.gradle.kts
shared/src/androidMain/kotlin/org/aiorka/platform/: Platform.kt
shared/src/commonMain/composeResources/files/: aiOrka.yaml  models-registry.yaml  policies.yaml
shared/src/commonMain/kotlin/org/aiorka/: AiOrka.kt
shared/src/commonMain/kotlin/org/aiorka/adapters/: AnthropicAdapter.kt  DeepSeekAdapter.kt  GeminiAdapter.kt  OllamaAdapter.kt  OpenAiAdapter.kt  ProviderAdapter.kt  QwenAdapter.kt  SelfHostedAdapter.kt
shared/src/commonMain/kotlin/org/aiorka/benchmark/: BenchmarkConfig.kt  BenchmarkModels.kt  BenchmarkRunner.kt  MarkdownReporter.kt
shared/src/commonMain/kotlin/org/aiorka/credentials/: CredentialResolver.kt
shared/src/commonMain/kotlin/org/aiorka/engine/: SelectionEngine.kt
shared/src/commonMain/kotlin/org/aiorka/models/: RegistryModels.kt
shared/src/commonMain/kotlin/org/aiorka/monitoring/: HealthMonitor.kt  HeartbeatManager.kt
shared/src/commonMain/kotlin/org/aiorka/platform/: Platform.kt
shared/src/commonMain/kotlin/org/aiorka/resources/: ResourceLoader.kt  YamlParser.kt
shared/src/commonTest/kotlin/org/aiorka/: AiOrkaExecuteTest.kt
shared/src/commonTest/kotlin/org/aiorka/adapters/: FakeAdapter.kt
shared/src/commonTest/kotlin/org/aiorka/benchmark/: MarkdownReporterTest.kt
shared/src/darwinMain/kotlin/org/aiorka/platform/: Platform.kt
shared/src/jvmTest/kotlin/org/aiorka/: IntegrationTest.kt
shared/src/nativeInteropMain/kotlin/org/aiorka/: CApi.kt
(+10 files in other folders)
